# what-port-is

./: .gitignore  README.md  main.py  pyproject.toml  wport.py
script/: portInfo.py  wport.py
